--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.18.0",
     "countup.js": "^2.0.4",
     "echarts": "^4.2.1",
     "iview": "^3.4.1",
     "lodash": "^4.17.11",
-    "moment": "^2.24.0",
+    "moment": "^2.29.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -30,9 +31,11 @@
   "devDependencies": {
     "@vue/cli-plugin-typescript": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
+    "image-webpack-loader": "^8.1.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.14.1",
+    "postcss-pxtorem": "^5.1.1",
     "rollup": "^1.12.4",
     "rollup-plugin-node-resolve": "^5.0.0",
     "rollup-plugin-uglify": "^6.0.2",
